--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "routing-express",
-  "version": "0.5.1",
+  "name": "@tosarus/routing-express",
+  "version": "0.5.4",
   "description": "Routing library for express",
-  "main": "./src/index.ts",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "author": "Vladimir Kondrashov <aristovlad@gmail.com>",
   "license": "MIT",
   "repository": {
@@ -11,8 +12,11 @@
   },
   "scripts": {
     "build": "tsc",
-    "clean": "rm -rf dist/"
+    "clean": "rm -rf lib/"
   },
+  "files": [
+    "lib/**/*"
+  ],
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
