--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
     "target": "ES2018" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */,
     "lib": ["ES2018"] /* Specify library files to be included in the compilation. */,
-    "outDir": "dist" /* Redirect output structure to the directory. */,
-    "rootDir": "./src",
+    "outDir": "./lib" /* Redirect output structure to the directory. */,
     "strict": true /* Enable all strict type-checking options. */,
     "declaration": true,
     "removeComments": false,
