--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tosarus/routing-express",
-  "version": "0.5.6",
+  "version": "0.5.7",
   "description": "Routing library for express",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -25,11 +25,11 @@
     "@typescript-eslint/parser": "^5.26.0",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "express": "^4.18.1",
-    "multer": "^1.4.4",
+    "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13"
   }
 }
