--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@tosarus/routing-express",
-  "version": "0.5.27",
+  "version": "0.5.36",
   "description": "Routing library for express",
+  "type": "commonjs",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "author": "Vladimir Kondrashov <aristovlad@gmail.com>",
@@ -16,19 +17,19 @@
     "clean": "rm -rf lib/"
   },
   "files": [
-    "lib/**/*"
+    "/lib"
   ],
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/multer": "^1.4.7",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
-    "eslint": "^8.16.0",
-    "eslint-config-prettier": "^8.5.0",
-    "typescript": "^4.7.4"
+    "@types/express": "^4.17.18",
+    "@types/multer": "^1.4.8",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^8.10.0",
+    "typescript": "4.6.x"
   },
   "dependencies": {
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13"
   }
