--- a/.editorconfig
+++ b/.editorconfig
@@ -4,9 +4,8 @@ root = true
 indent_style = space
 indent_size = 2
 charset = utf-8
-end_of_line = lf
+end_of_line = crlf
 max_line_length = 125
-charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 quote_type = single
