--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "@tosarus/routing-express",
-  "version": "0.5.36",
+  "version": "0.6.0",
   "description": "Routing library for express",
   "type": "commonjs",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "author": "Vladimir Kondrashov <aristovlad@gmail.com>",
   "license": "MIT",
+  "engines": {
+    "node": "<23",
+    "yarn": "1.x"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tosarus/routing-express.git"
@@ -14,23 +18,27 @@
   "scripts": {
     "build": "tsc",
     "prepare": "yarn build",
-    "clean": "rm -rf lib/"
+    "clean": "rimraf -rf lib/"
   },
   "files": [
     "/lib"
   ],
   "devDependencies": {
-    "@types/express": "^4.17.18",
-    "@types/multer": "^1.4.8",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.52.0",
-    "eslint": "^8.50.0",
-    "eslint-config-prettier": "^8.10.0",
-    "typescript": "4.6.x"
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.12.0",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
+    "rimraf": "^6.0.1",
+    "typescript": "5.7.3",
+    "typescript-eslint": "^8.22.0"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.2.2"
   }
 }
