--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tosarus/routing-express",
-  "version": "0.6.0",
+  "version": "0.6.2",
   "description": "Routing library for express",
   "type": "commonjs",
   "main": "./lib/index.js",
@@ -24,21 +24,21 @@
     "/lib"
   ],
   "devDependencies": {
+    "@types/express": "^5.0.2",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.12.0",
-    "eslint": "^9.19.0",
-    "eslint-config-prettier": "^10.0.1",
+    "@types/node": "^22.15.20",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.3",
-    "globals": "^15.14.0",
-    "prettier": "^3.4.2",
+    "eslint-plugin-prettier": "^5.4.0",
+    "globals": "^16.1.0",
+    "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "typescript": "5.7.3",
-    "typescript-eslint": "^8.22.0"
+    "typescript": "5.8.3",
+    "typescript-eslint": "^8.32.1"
   },
   "dependencies": {
-    "express": "^4.21.2",
-    "multer": "^1.4.5-lts.1",
+    "express": "^5.1.0",
     "reflect-metadata": "^0.2.2"
   }
 }
